lib/tests/fixtures/compiler/parser/break_in_interpolation.pp
[].each |$x| {
    # legal
    notice "${ 'foo'.each |$x| { if $x == 'o' { break } $x } }"

    # not legal
    "${ if true { break } }"
}
